# vulkan-light-bakery

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.txt  download_assets.py  scene.hpp
shaders/: basic.rahit  basic.rchit  basic.rgen  basic.rmiss  basic.rshadow  bvh_observer.frag  bvh_observer.vert  cubemap.rchit  cubemap.rgen  cubemap.rmiss  env_map.rchit  env_map.rgen  hardcoded_sh_basis.h  irrad.comp  main.rchit  main.rgen  main.rmiss  random.glsl  sh.comp  sh.rcall  sh.rmiss  sh_common.h  sh_sum.comp  shadow.rmiss  skybox_sh.comp  skybox_sh.rmiss  structures.h
src/: acceleration_structure.hpp  application.cpp  application.hpp  camera.cpp  camera.hpp  main.cpp  messenger.hpp  raytracer.cpp  raytracer.hpp  renderer.cpp  renderer.hpp  scene_manager.cpp  scene_manager.hpp  skybox_manager.cpp  skybox_manager.hpp  ui.cpp  ui.hpp
src/baker/: env_map_generator.cpp  env_map_generator.hpp  light_baker.cpp  light_baker.hpp  main.cpp
src/bvh_observer/: bvh_observer.cpp  bvh_observer.hpp  main.cpp  renderer.cpp  renderer.hpp
src/realtime_raytracer/: raytracer.cpp  raytracer.hpp  renderer.cpp  renderer.hpp  ui.cpp  ui.hpp
